parse csv refactor